<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="25dp"
    tools:context=".ui.home.HomeFragment">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/home_search"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableLeft="@android:drawable/ic_menu_search"
        android:hint="@string/Home_senior_project_manager_london"
        android:drawablePadding="5dp"
        android:background="@drawable/rounded_edittext"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/home_clear_search"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/home_clear_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:drawable/ic_menu_close_clear_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/home_search"
        app:layout_constraintBottom_toBottomOf="@id/home_search"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/home_filter_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/home_search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/home_find_job"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginEnd="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/home_help_others">
    
            <com.google.android.material.button.MaterialButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                style="@style/Widget.App.Button.OutlinedButton.Icon"
                app:icon="@android:drawable/ic_menu_camera"
                app:strokeColor="#0F2E12"
                app:iconSize="24dp"
                app:iconGravity="textStart"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Circle"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_find_jobs"
                android:textSize="12sp"
                android:textStyle="bold" />
            
        </androidx.appcompat.widget.LinearLayoutCompat>
    
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/home_help_others"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="10dp"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.button.MaterialButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                style="@style/Widget.App.Button.OutlinedButton.Icon"
                app:icon="@android:drawable/ic_menu_camera"
                app:strokeColor="#0F2E12"
                app:iconSize="24dp"
                app:iconGravity="textStart"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Circle"/>
            
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_help_others"
                android:textSize="12sp"
                android:textStyle="bold" />
            
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/home_find_candidates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginStart="10dp"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/home_help_others"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.button.MaterialButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                style="@style/Widget.App.Button.OutlinedButton.Icon"
                app:icon="@android:drawable/ic_menu_camera"
                app:strokeColor="#0F2E12"
                app:iconSize="24dp"
                app:iconGravity="textStart"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Circle"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/home_find_candidates"
                android:textStyle="bold" />
            
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/home_viewpager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/home_filter_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/home_filter_layout"
        app:layout_constraintHeight_percent=".33"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/home_help_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="3dp"
        android:textSize="18sp"
        android:text="@string/home_help_friends_and_get_paid"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_viewpager"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/home_recycleview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_margin="5dp"
        app:layout_constraintHeight_percent=".43"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_help_label" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/home_help_label_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="3dp"
        android:textSize="18sp"
        android:text="@string/home_help_friends_and_get_paid"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_recycleview"/>

</androidx.constraintlayout.widget.ConstraintLayout>